# Pilot

./: .conf  .gitignore  README.md  pilot.conf  pilot.txt  pyproject.toml
pilot/: __main__.py  base_manager.py  singleton.py
pilot.egg-info/: PKG-INFO  SOURCES.txt
pilot/base/: manager.py  pipeline.py
pilot/cli/: main.py  tasks.py
pilot/default/: aws.py  context.py  deploy.py  publish.py
pilot/docs/: __init__.py  aws.md  docker.md  git.md  readme.md  remote_docker.md
pilot/scripts/linux/: commit-msg.sh  prepare-commit-msg.sh
pilot/scripts/windows/: commit-msg.bat  prepare-commit-msg.bat
pilot/src/: aws.py  build.py  config.py  context.py  deploy.py  docker.py  git.py  log.py  package.py  publish.py  pyproject.py  pytrobot.py  vscode.py
