[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot"
version = "2.0.0"
description = "CLI for RPA tasks"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
pilot = "pilot.__main__:cli"

[tool.poetry.dependencies]
build = "*"
poetry = "*"
rich = "*"
click = "*"
twine = "*"

[tool.setuptools.packages.find]
where = ["."]
