[build-system]
requires = ["setuptools>=70","wheel","setuptools_scm[toml]>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot"
version = "2.0.0"
description = "CLI for RPA tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build",
    "poetry",
    "rich",
    "click",
    "twine",
    "colorama"
]

[project.scripts]
pilot = "pilot.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
